# qtk

./: .gitignore  ATTRIBUTION.md  pyproject.toml
docs/: AUDIT.md
src/qtk/: __init__.py  cli.py  date_utils.py  errors.py  panel.py  portfolio.py  position.py
src/qtk/ts/: __init__.py  algebra.py  analysis.py  dateops.py  downside.py  drawdown.py  econometrics.py  helper.py  ratios.py  risk.py  statistics.py  technicals.py
tests/: conftest.py  test_algebra.py  test_analysis.py  test_capm_extensions.py  test_date_utils.py  test_dateops.py  test_downside.py  test_drawdown.py  test_econometrics.py  test_errors.py  test_helper.py  test_higher_moments.py  test_panel.py  test_portfolio.py  test_position.py  test_ratios.py  test_risk.py  test_statistics.py  test_technicals.py
