[project]
name = "qtk"
version = "0.1.0"
description = "Quant Toolkit: portfolio management, signals, and market data"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "numpy>=2.0",
    "polars>=1.0",
    "scipy>=1.13",
    "typer>=0.12",
]

[project.scripts]
qtk = "qtk.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff.lint]
select = ["E", "F", "I"]
